Login e change password validados

--- a/app_client/src/assets/main.css
+++ b/app_client/src/assets/main.css
@@ -27,6 +27,10 @@ a,
     place-items: center;
   }
 
+  .img-fluid {
+    width: 111px;
+  }
+
   #app {
     display: grid;
     grid-template-columns: 1fr 1fr;
