--- a/app_client/src/assets/dashboard.css
+++ b/app_client/src/assets/dashboard.css
@@ -32,6 +32,10 @@ body {
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
+.img-fluid {
+  width: 115px;
+}
+
 @media (max-width: 767.98px) {
   .sidebar {
     top: 0rem;
